# LocNguyenSGU

./: README.md  pyproject.toml
.github/workflows/: profile-3d.yml
docs/superpowers/specs/: 2026-04-12-github-readme-contributions-design.md  2026-04-12-svg-card-redesign-design.md
src/readme_updater/: cli.py  config.py  filters.py  github_api.py  models.py  readme_renderer.py  service.py  state_store.py  svg_renderer.py
tests/: test_cli.py  test_config.py  test_filters.py  test_github_api.py  test_readme_renderer.py  test_svg_renderer.py
tests/fixtures/: notifications.json  pull_repo1_pr101.json  pull_repo1_pr102.json  pull_repo2_pr88.json
